--- a/install
+++ b/install
@@ -36,4 +36,5 @@ dotbot install_steps/essentials.yml
 dotbot install_steps/dependencies.yml
 dotbot install_steps/shell.yml
 dotbot install_steps/neovim.yml
+dotbot install_steps/cleanup.yml
 
